--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset.html
@@ -6,7 +6,7 @@
 {% block content %}
 
     <div class="row">
-        <div class="span16">
+        <div class="span12">
             <h4>{% trans "Reset password for" %} {{ user }}</h4>
             <form action="" method="post" accept-charset="utf-8">
                 {% if form.non_field_errors %}
@@ -33,7 +33,7 @@
 
                 <hr />
                 <a href="{% url 'profile_overview' %}" class="btn">&laquo; {% trans "Go back" %}</a>
-                <input class="btn primary" type="submit" value="{% trans 'Reset my password' %}" />
+                <input class="btn btn-primary" type="submit" value="{% trans 'Reset my password' %}" />
 
             </form>
         </div>
