--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset_confirm.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password change for' %} {{ user }}{% endblock %}
@@ -15,54 +15,59 @@
 
 {% block content %}
 
-    {% if validlink %}
-	    <form action="" method="post" accept-charset="utf-8">
-            {% if form.non_field_errors %}
-                {% for error in form.non_field_errors %}
-                    <span class="help-inline">{{ error|escape }}</span>
-                {% endfor %}
+    <div class="row">
+        <div class="span12">
+            {% if validlink %}
+	            <form action="" method="post" accept-charset="utf-8">
+                    {% if form.non_field_errors %}
+                        {% for error in form.non_field_errors %}
+                            <span class="help-inline">{{ error|escape }}</span>
+                        {% endfor %}
+                    {% endif %}
+
+                    <div class="clearfix {% if form.new_password1.errors %}error{% endif%}">
+                        <label for="prependedInput">{% trans "New password" %}</label>
+                        <div class="input">
+                            {{ form.new_password1 }}
+                            <span class="help-inline">
+                                {% if form.new_password1.errors %}
+                                    {% for error in form.new_password1.errors %}
+                                        {{ error|escape }}
+                                    {% endfor %}
+                                {% else %}
+                                    {{ form.new_password1.help_text }}
+                                {% endif %}
+                            </span>
+                        </div>
+                    </div>
+                    <div class="clearfix {% if form.new_password2.errors %}error{% endif%}">
+                        <label for="prependedInput">{% trans "Confirm password" %}</label>
+                        <div class="input">
+                            {{ form.new_password2 }}
+                            <span class="help-inline">
+                                {% if form.new_password2.errors %}
+                                    {% for error in form.new_password2.errors %}
+                                        {{ error|escape }}
+                                    {% endfor %}
+                                {% else %}
+                                    {{ form.new_password2.help_text }}
+                                {% endif %}
+                            </span>
+                        </div>
+                    </div>
+
+                    <hr />
+                    <a href="{% url 'profile_overview' %}" class="btn">&laquo; {% trans "Go back" %}</a>
+                    <input class="btn primary" type="submit" value="{% trans 'Change' %}" />
+        	    </form>
+
+            {% else %}
+                <div class="error">
+		            <h3>{% trans 'Password reset unsuccessful' %}</h3>
+        		    <p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}
+                </div>
             {% endif %}
-
-            <div class="clearfix {% if form.new_password1.errors %}error{% endif%}">
-                <label for="prependedInput">{% trans "New password" %}</label>
-                <div class="input">
-                    {{ form.new_password1 }}
-                    <span class="help-inline">
-                        {% if form.new_password1.errors %}
-                            {% for error in form.new_password1.errors %}
-                                {{ error|escape }}
-                            {% endfor %}
-                        {% else %}
-                            {{ form.new_password1.help_text }}
-                        {% endif %}
-                    </span>
-                </div>
-            </div>
-            <div class="clearfix {% if form.new_password2.errors %}error{% endif%}">
-                <label for="prependedInput">{% trans "Confirm password" %}</label>
-                <div class="input">
-                    {{ form.new_password2 }}
-                    <span class="help-inline">
-                        {% if form.new_password2.errors %}
-                            {% for error in form.new_password2.errors %}
-                                {{ error|escape }}
-                            {% endfor %}
-                        {% else %}
-                            {{ form.new_password2.help_text }}
-                        {% endif %}
-                    </span>
-                </div>
-            </div>
-
-            <hr />
-            <a href="{% url 'profile_overview' %}" class="btn">&laquo; {% trans "Go back" %}</a>
-            <input class="btn primary" type="submit" value="{% trans 'Change' %}" />
-	    </form>
-
-    {% else %}
-        <div class="error">
-		    <h3>{% trans 'Password reset unsuccessful' %}</h3>
-		    <p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}
         </div>
-    {% endif %}
+    </div>
+
 {% endblock %}
