--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/personal.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/personal.html
@@ -4,8 +4,11 @@
 {% block title %}{% trans "Edit your personal information" %}{% endblock %}
 
 {% block content %}
-    <div id="contenttitles">{% trans "Edit your personal information" %}</div>
-	    <div class="grid_11">
+    
+    <div class="row">
+        <div class="span12">
+            <h3>{% trans "Edit your personal information" %}</h3>
+            
 	        <form action="{{ request.path_info }}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 
@@ -23,8 +26,10 @@
                 {% endfor %}
 	            
 	            <a href="{% url 'profile_overview' %}" class="btn">&laquo; {% trans "Go back" %}</a>
-	            <input type="submit" class="btn primary" value="{% trans 'Save' %}" />
-	            <a href="{% url 'profile_delete' %}" class="btn danger" style="float:right;">{% trans "Delete profile" %}</a>
+	            <input type="submit" class="btn btn-primary" value="{% trans 'Save' %}" />
+	            <a href="{% url 'profile_delete' %}" class="btn btn-danger" style="float:right;">{% trans "Delete profile" %}</a>
 	        </form>
-	    </div>
+        </div>
+    </div>
+
 {% endblock %}
