--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/email_validation_reset_response.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/email_validation_reset_response.html
@@ -1,25 +1,22 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% ifequal params.action "done" %}{% trans 'Validation e-mail sent' %}{% else %}{% trans 'Your user account was already active' %}{% endifequal %}{% endblock %}
-{% block robots %}noindex,nofollow{% endblock %}
-
-{% block nav-main %}
-{% include "userprofile/menu.html" %}
-{% endblock %}
 
 {% block content %}
-	<p class="{% ifequal params.action "done" %}success{% else %}notice{% endifequal %} large">
-	{% ifequal params.action "done" %}
-		{% trans "We've e-mailed you the e-mail validation link" %}.
-	{% else %}
-		{% trans 'Your e-mail was already validated' %}. 
-	{% endifequal %}
-	</div>
-{% endblock %}
-{% block content-related %}
-  <div class="box">
-    <h3>{% trans "E-mail validation process" %}</h3>
-    <p>{% trans "You can manage the e-mail validation process from the" %} <a href="{% url 'profile_overview' %}">{% trans "overview page" %}.</p>
-  </div>
+
+    <div class="row">
+        <div class="span8">
+            {% ifequal params.action "done" %}
+		        {% trans "We've e-mailed you the e-mail validation link" %}.
+	        {% else %}
+		        {% trans 'Your e-mail was already validated' %}. 
+	        {% endifequal %}
+        </div>
+        <div class="span4">
+            <h3>{% trans "E-mail validation process" %}</h3>
+            <p>{% trans "You can manage the e-mail validation process from the" %} <a href="{% url 'profile_overview' %}">{% trans "overview page" %}.</p>
+        </div>
+    </div>
+
 {% endblock %}
