--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_change.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_change.html
@@ -15,7 +15,7 @@
 {% block content %}
 
     <div class="row">
-        <div class="span16">
+        <div class="span12">
             <h4>{% trans "Password change for" %} {{ user }}</h4>
             <form action="" method="post" accept-charset="utf-8">
                 {% if form.non_field_errors %}
@@ -74,7 +74,7 @@
 
                 <hr />
                 <a href="{% url 'profile_overview' %}" class="btn">&laquo; {% trans "Go back" %}</a>
-                <input class="btn primary" type="submit" value="{% trans 'Modify' %}" />
+                <input class="btn btn-primary" type="submit" value="{% trans 'Modify' %}" />
 
             </form>
         </div>
