--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_expired.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_expired.html
@@ -2,10 +2,13 @@
 {% load i18n %}
 
 {% block title %}{% trans 'Password key expired' %}{% endblock %}
-{% block robots %}noindex,nofollow{% endblock %}
 
 {% block content %}
-	<div id="notice" class="prepend-4 append-4">
-		<h4>{% trans "The password key you're trying to use is expired. Please, request a new one" %}.</h4>
-	</div>
+    
+    <div class="row">
+        <div class="span12">
+            <h4>{% trans "The password key you're trying to use is expired. Please, request a new one" %}.</h4>
+        </div>
+    </div>
+
 {% endblock %}
