--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
@@ -5,7 +5,6 @@
 {% block title %}{% trans "Overview of your profile" %}{% endblock %}
 
 {% block extrajs %}
-    <script src="{{ STATIC_URL }}/js/bootstrap-tabs.js" type="text/javascript"></script>
     {% if GOOGLE_MAPS_API_KEY and user.get_profile.location %}
         <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
@@ -31,17 +30,17 @@
 {% block content %}
 
     <div class="row">
-        <div class="span16">
-            <ul class="tabs" data-tabs="tabs">
-                <li class="active"><a href="#profile">{% trans "Profile" %}</a></li>
+        <div class="span12">
+            <ul class="nav nav-tabs">
+                <li class="active"><a href="#profile" data-toggle="tab">{% trans "Profile" %}</a></li>
                 {% if proposals %}
-                    <li><a href="#proposals">{% trans "Your proposals" %}</a></li>
+                    <li><a href="#proposals" data-toggle="tab">{% trans "Your proposals" %}</a></li>
                 {% endif %}
                 {% if events %}
-                    <li><a href="#events">{% trans "Your events" %}</a></li>
+                    <li><a href="#events" data-toggle="tab">{% trans "Your events" %}</a></li>
                 {% endif %}
                 <li class="dropdown" data-dropdown="dropdown">
-                    <a href="#" class="dropdown-toggle">{% trans "Options" %}</a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Options" %} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="{% url 'profile_edit_personal' %}">{% trans 'Edit personal data' %}</a></li>
                         <li><a href="{% url 'profile_edit_location' %}">{% trans 'Edit location' %}</a></li>
@@ -64,7 +63,7 @@
                                 <a href="{% url 'profile_edit_avatar' %}">{% if user.get_profile.has_avatar %}{% trans "Change avatar" %}{% else %}{% trans "Add avatar" %}{% endif %}</a>
                             </p>
                         </div>
-                        <div class="span7">
+                        <div class="span5">
                             <p><strong>{% trans "Username" %}</strong>: {{ user }}</p>
                             <p><strong>{% trans "Real name" %}</strong>: {{ user.get_profile.firstname }} {{ user.get_profile.surname }}</p>
                             <p><strong>{% trans "Age" %}</strong>: {{ user.get_profile.get_age }} {% trans "years" %}
@@ -92,7 +91,7 @@
 
                             <p><strong>{% trans "City" %}</strong>: {{ user.get_profile.province }}</p>
                         </div>
-                        <div class="span7">
+                        <div class="span5">
                             {% if GOOGLE_MAPS_API_KEY %}
                                 <p>{% trans "Location" %}:
                                     {% if user.get_profile.location %}
@@ -111,7 +110,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="span16">
+                        <div class="span12">
                             <h4>{% trans "Spaces you're signed on" %}</h4>
                             <ul class="unstyled">
                                 {% for space in user.get_profile.spaces.all %}
@@ -127,12 +126,12 @@
                 {% if proposals %}
                 <div class="tab-pane" id="proposals">
                     <div class="row">
-                        <div class="span11">
+                        <div class="span8">
                             <h4>{% trans 'Your proposals' %}</h4>
                             {% for p in proposals %}
                                 <div id="proposal-wrapper">
                                     <div id="votes">
-                                        <span style="font-size:24px;text-align:center;">{{ p.support_votes }}</span><br/>{% trans "support votes" %}
+                                        <span style="font-size:24px;text-align:center;">{{ p.support_votes__count }}</span><br/>{% trans "support votes" %}
                                     </div>
                                     <!-- Here goes the voting button -->
                                     <div id="proposal">
@@ -149,7 +148,7 @@
                             {% endfor %}
 
                         </div>
-                        <div class="span5">
+                        <div class="span4">
                             <h4>{% trans "Other options" %}</h4>
                         </div>
                     </div>
@@ -159,10 +158,10 @@
                 {% if events %}
                 <div class="tab-pane" id="proposals">
                     <div class="row">
-                        <div class="span11">
+                        <div class="span8">
 
                         </div>
-                        <div class="span5">
+                        <div class="span4">
 
                         </div>
                     </div>
