--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/personal_done.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/personal_done.html
@@ -5,10 +5,14 @@
 {% block robots %}noindex,nofollow{% endblock %}
 
 {% block content %}
-	<div id="grid_16">
-		{% trans "Your profile information has been updated successfully." %}<br/><br/><br/>
-		<div>
-		    {% trans "You can go" %} <a href="/"><u>{% trans "back to home" %}</u></a> {% trans "or" %} <a href="{% url 'profile_overview' %}"><u>{% trans "back to your profile" %}</u></a>
-	  </div>
-	</div>
+    
+    <div class="row">
+        <div class="span12">
+            {% trans "Your profile information has been updated successfully." %}<br/><br/><br/>
+		    <div>
+		        {% trans "You can go" %} <a href="/"><u>{% trans "back to home" %}</u></a> {% trans "or" %} <a href="{% url 'profile_overview' %}"><u>{% trans "back to your profile" %}</u></a>
+	        </div>
+        </div>
+    </div>
+   
 {% endblock %}
