--- a/src/e_cidadania/apps/debate/templates/debate/debate_view.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_view.html
@@ -40,7 +40,7 @@
             
             <div id="debate">
                 
-                <table id="debate{{ debate.pk }}" cellspacing="0" style="width:100%;">
+                <table id="debate{{ debate.pk }}" cellspacing="0" style="width:100%;" align="left">
                     <thead>
                         <tr id="debate{{ debate.pk }}-headers">
                             <th id="corner" class="corner-criteria"></th>
