--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_edit.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_edit.html
@@ -40,6 +40,8 @@
                             </div> 
                         </div>
                     {% endfor %}
+                    
+                    {% wysiwyg_editor "id_description" %}
     
                 {% else %}
         
