--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -101,7 +101,7 @@
         {% block freewidth %}
         {% endblock %}
         
-        <footer style="background:#EEE;padding-bottom:10px;border-bottom:1px solid #DDD;margin-bottom:15px;border-top:1px solid #DDD;">
+        <footer>
 	        <div class="row" style="width:960px;margin:auto;">
 	               
 	        <div class="span3">
