--- a/src/e_cidadania/apps/debate/templates/debate/debate_view.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_view.html
@@ -56,7 +56,7 @@
                                     The th style width is meant to make smaller the th, since most browsers make
                                     the th fill all the space.
                                 {% endcomment %}
-                                <th id="row-{{ row.id }}" width="10" style="width:10px;"><div class="debate-ttitle">{{ row.criteria }}</div></th>
+                                <th id="row-{{ row.id }}" width="1%"><div class="debate-ttitle">{{ row.criteria }}</div></th>
                                 {% for td in columns %}
                                     <td headers="{{ td.id }}-{{ row.id }}" id="sortable-debate" class="connectedSortable">
                                         {% for note in notes %}
@@ -103,7 +103,7 @@
                                 <label for="prependedInput">{% trans "Description" %}</label>
                                 <div class="input">
                                     <textarea id="id_note_message"></textarea>
-                                    {% comment %}{% wysiwyg_editor "id_note_message" %}{% endcomment %}
+                                    {% wysiwyg_editor "id_note_message" %}
                                     <span class="help-inline"></span>
                                 </div>
                             </div>
@@ -128,7 +128,7 @@
                     </div>
                 </div>
 
-                <span class="btn btn-primary small" id="new-note" onclick="createNote()">{% trans "Add new note" %}</span>
+                <span class="btn btn-primary btn-small" id="new-note" onclick="createNote()">{% trans "Add new note" %}</span>
                 <div id="sortable-dispatcher"></div>
                 
             </div>
