--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -65,9 +65,20 @@ hr { /* This hr replaces the bootstrap one */
     margin-top: 45px;
 }
 
-.content {
-    min-height: 500px;
+/*.content {*/
+/*    min-height: 500px;*/
+/*}*/
+
+footer {
+    background: #EEE;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #DDD;
+    margin-bottom: 15px;
+    border-top: 1px solid #DDD;
+    padding-top: 10px;
+    margin-top: 20px;
 }
+
 /* END COMMON CUSTOMIZATIONS */
 
 /* MAIN INDEX */
@@ -173,16 +184,6 @@ hr { /* This hr replaces the bootstrap one */
 }
 
 /* END COMMENT LIST*/
-
-/* LANGUAGE SELECTOR */
-#language {
-    width: 100px;
-}
-
-#language option {
-    background: #222;
-}
-/* END LANGUAGE SELECTOR */
 
 /* PROPOSAL STYLES */
 .proposal-wrapper {
