Move code away from menu definitions.

--- a/views/layout.html
+++ b/views/layout.html
@@ -84,6 +84,7 @@
     {{include "layout_iframe.html"}}
     {{include}}
 {{else:}}
+{{s3_compose_option_menu()}}
 </head>
 <body>
     <div id='menu_modules'>
