Comments fields reduced height to make forms work better on laptop screens, Req on Inv menu

--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -197,6 +197,9 @@ fieldset {
 input, select, textarea {
     font-size: 100%;
 }
+textarea.comments {
+    height: 50px;
+}
 .hide {
     display: none;
 }
