CERT enhancements with new demo: Prepopulate Teams, Radio Callsigns, Course Certificates. Wire up the Course Certificates & Certificate Skills. Fix IS_LOCATION_SELECTOR's ability to handle invalid LatLons

--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -1268,6 +1268,23 @@ div#last_update {
     width: 16px;
     background-image: url(../../img/icon_blue_minus15px.png);
 }
+.expand {
+    /*position: static;*/
+    height: 16px;
+    width: 16px;
+    float: left;
+    background-image: url(../../img/jquery-ui/ui-icons_222222_256x240.png);
+    background-position: -32px -16px;
+}
+.expanded {
+    /*position: static;*/
+    height: 16px;
+    width: 16px;
+    float: left;
+    background-image: url(../../img/jquery-ui/ui-icons_222222_256x240.png);
+    background-position: -64px -16px;
+}
+
 
 .rfilter {
     float: left;
