Migrating various function based views to class based views

--- a/src/e_cidadania/apps/staticpages/templates/staticpages/staticpages_index.html
+++ b/src/e_cidadania/apps/staticpages/templates/staticpages/staticpages_index.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}{{ page.name }}{% endblock %}
+{% block title %}{{ staticpage.name }}{% endblock %}
     
 {% block content %}
 
     <div class="row">
         <div class="span12">
-            {{ page.content|safe }}
+            {{ staticpage.content|safe }}
       
             <hr />
             <a href="{% url 'site-index' %}" class="btn small">&laquo; {% trans "Go back" %}</a>
 
             <div class="pageinfo">
-                {% trans "last updated" %} {{ page.last_update }}
+                {% trans "last updated" %} {{ staticpage.last_update }}
             </div>
         </div>
     </div>
