CMS progress, Staff/Volunteers can be alone, SSF prepop, cleanup some deprecated code

--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -200,6 +200,9 @@ input, select, textarea {
 textarea.comments {
     height: 50px;
 }
+textarea.richtext {
+    height: 100px;
+}
 .hide {
     display: none;
 }
