--- a/views/cms/discuss.html
+++ b/views/cms/discuss.html
@@ -3,5 +3,5 @@
  {{=rheader}}
 </div>
 <div id='component'>
-{{=LOAD("delphi", "comments.load", args=[resourcename, id], ajax=True)}}
+{{=LOAD("cms", "comments.load", args=["post", id], ajax=True)}}
 </div>
