--- a/views/default/index.html
+++ b/views/default/index.html
@@ -2,13 +2,12 @@
 <div id='home'>
 {{try:}}
 <h2>{{=title}}</h2>
-{{except:}}
-{{pass}}
+{{except:}}{{pass}}
+{{=XML(item)}}
 <div id='menu_box_1'>
 {{try:}}
 {{=sit_dec_res_box}}
-{{except:}}
-{{pass}}
+{{except:}}{{pass}}
 {{=facility_box}}
 {{if AUTHENTICATED not in session.s3.roles:}}
 	<div id='login_box' class='menu_box'>
