Fixed blank email address during registration

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/registration.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/registration.html
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="clearfix {% if form.email.errors %}error{% endif%}">
-                    <label for="prependedInput">{% trans "E-mail (optional)" %}</label>
+                    <label for="prependedInput">{% trans "E-mail" %}</label>
                     <div class="input">
                         {{ form.email }}
                         <span class="help-inline">
