--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/location_done.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/location_done.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="span12">
             <h3>{% trans "Your profile information has been updated successfully" %}.</h3>
-            <p><a href="{% url 'profile-overview' %}">{% trans "Go back to your profile" %}</p>
+            <p><a href="{% url 'profile_overview' %}">{% trans "Go back to your profile" %}</p>
         </div>
     </div>
 
