Updated text to show that Description is publicly visible

--- a/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
@@ -204,7 +204,7 @@
             <h4>{% trans "How to add new spaces" %}</h4><br/>
             <ul class="instructions">
                 <li><strong>{% trans "Space name" %}</strong>: {% trans "The name of the space. Have in mind that this name will be used as the URL of your space. We recommend to use all lowercase. (100 chars)" %}</li>
-                <li><strong>{% trans "Description" %}</strong>: {% trans "An optional description for your space. It won't be showed to the users, but to the admins." %}</li>
+                <li><strong>{% trans "Description" %}</strong>: {% trans "An optional description for your space. This is publicly visible to everyone." %}</li>
                 <li><strong>{% trans "Logotype" %}</strong>: {% trans "An image of 75px height and 100px width." %}</li>
                 <li><strong>{% trans "Banner" %}</strong>: {% trans "Another image. 75px height." %}</li>
                 <li><strong>{% trans "Authorized groups" %}</strong>: {% trans "This will set up what users can access to your space." %}</li>
