--- a/src/e_cidadania/templates/comments/form.html
+++ b/src/e_cidadania/templates/comments/form.html
@@ -1,6 +1,28 @@
 {% load comments i18n %}
 <div id="ctitle">{% trans "Leave a comment" %}</div>
-<form action="{% comment_form_target %}" method="post" class="commentform">{% csrf_token %}
+{% if user.is_authenticated %}
+    <form action="{% comment_form_target %}" method="post" class="commentform">
+        {% csrf_token %} 
+        {% if next %}<div><input type="hidden" name="next" value="{{ next }}" /></div>{% endif %}
+        {% for field in form %}
+           {% if field.is_hidden %}
+             <div> {{ field }}</div>
+        {% else %}
+        {% if field.name != "name" and field.name != "email" and field.name != "url" and field.name != "honeypot" %}
+          {% if field.errors %}{{ field.errors }}{% endif %}
+            {{ field }}
+         {% endif %}
+        {% endif %}
+       {% endfor %}
+   <br/>
+    <p class="submit">
+        <input type="submit" name="post" class="submit-post btn" value="{% trans "Post" %}" />
+        <input type="submit" name="preview" class="submit-preview btn" value="{% trans "Preview" %}" />
+    </p>
+
+    </form>
+                                                                                                                                                              {% else %}
+  <form action="{% comment_form_target %}" method="post" class="commentform">{% csrf_token %}
     {% if next %}<div><input type="hidden" name="next" value="{{ next }}" /></div>{% endif %}
     {% for field in form %}
         {% if field.is_hidden %}
@@ -28,3 +50,4 @@
         <input type="submit" name="preview" class="submit-preview btn" value="{% trans "Preview" %}" />
     </p>
 </form>
+{% endif %}
