--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
@@ -57,7 +57,8 @@
                     <div class="row">
                         <div class="span2">
                             <a href="{% url 'profile_edit_avatar' %}">
-                                <img class="border" src="/static/generic.96.jpg" />
+                                <img class="border" id="avatarimg" src="{% avatar 96 %}" />
+
                             </a>
                             <p>
                                 <a href="{% url 'profile_edit_avatar' %}">{% if user.get_profile.has_avatar %}{% trans "Change avatar" %}{% else %}{% trans "Add avatar" %}{% endif %}</a>
