Fixed STATIC_URL referencing in crop avatar function

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/avatar/crop.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/avatar/crop.html
@@ -7,9 +7,8 @@
 {% block extrajs %}
 <!--<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.imgareaselect-0.4.2.min.js"></script>-->
 <!------Adding new image select js and css files ---------->
-<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/imgareaselect-default.css" />
-<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.min.js"></script>
-<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.imgareaselect.pack.js"></script>
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/imgareaselect-default.css" />
+<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.imgareaselect.pack.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
       $('#cropimage').imgAreaSelect({
