solving ticket #156, now logged in user can not login or register N times

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/registration.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/registration.html
@@ -8,6 +8,9 @@
 
     <div class="row">
         <div class="span12">
+         {% if user.is_authenticated %}
+           <p> You are already logged in as <strong>{{user.username}}</strong> </p>
+         {% else %}
             <form action="" method="post" accept-charset="utf-8">
                 {% csrf_token %}
                 <h4>{% trans "User registration" %}</h4>
@@ -84,6 +87,7 @@
 
                 <p><input type="submit" value="{% trans 'Register' %}" class="btn btn-large" /></p>
             </form>
+          {% endif %}
         </div>
     </div>
 
