--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
@@ -14,25 +14,38 @@
 		          <div class="clearfix">
 		              <label for="id_username">{% trans "Username" %}</label>
 		              <div class="input">
-		                  {{ form.username }}
-		    	          {% if form.username.errors %}
-		    		          <span class="help-inline">{{ form.username.html_error_list }}</span>
-		    	          {% endif %}
-		    	      </div>
+		                    {{ form.username }}
+		    	            <span class="help-inline">
+                                {% if form.username.errors %}
+                                    {% for error in form.username.errors %}
+                                        {{ error|escape }}
+                                    {% endfor %}
+                                {% endif %}      
+                            </span>
+		    	       </div>
 		    	  </div>
 		    
 		          <div class="clearfix">
 		              <label for="id_password">{% trans "Password" %}</label>
 		              <div class="input">
-		                  {{ form.password }}
-		                  {% if form.password.errors %}
-		    		          <span class="help-inline">{{ form.password.html_error_list }}</span>
-		    	          {% endif %}
+		                    {{ form.password }}
+		    		        <span class="help-inline">
+                                {% if form.password.errors %}
+                                    {% for error in form.password.errors %}
+                                        {{ error|escape }}
+                                    {% endfor %}
+                                {% endif %}
+                            </span>
 		              </div>
 		          </div>
-		          {% if form.non_field_errors %}
-		    	      <ul class="help-inline">{{ form.non_field_errors.as_ul }}</ul>
-		          {% endif %}
+                  <span class="help-inline">
+                        {% if form.non_field_errors %}
+                            {% for error in form.non_field_errors %}
+                                {{ error|escape }}
+                            {% endfor %}
+                        {% endif %}  
+                  </span>
+		          
 	          </fieldset><br />
 	    
 	        <p><input type="submit" class="btn" value="{% trans 'Login' %}" /></p>
