--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -41,7 +41,15 @@ hr { /* This hr replaces the bootstrap one */
     border: 1px solid #FF6666;
 }
 
-.help-inline{display:inline-block;*display:inline;*zoom:1;margin-bottom:9px;vertical-align:middle;padding-left:5px;color:#ff0000;}
+.help-inline{
+    display:inline-block;
+    *display:inline;
+    *zoom:1;
+    margin-bottom:9px;
+    vertical-align:middle;
+    padding-left:5px;
+    color:#ff0000;
+}
 
 @font-face {
     font-family: "SansationRegular";
