--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_change.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/password_change.html
@@ -3,21 +3,12 @@
 
 {% block title %}{% trans 'Password change for' %} {{ user }}{% endblock %}
 
-{% block extrajs %}
-<script type="text/javascript">
-	$(function() {
-		$("#id_old_password").focus();
-		$("input[type='password']").addClass("text");
-	});
-</script>
-{% endblock %}
-
 {% block content %}
 
     <div class="row">
         <div class="span12">
             <h4>{% trans "Password change for" %} {{ user }}</h4>
-            <form action="" method="post" accept-charset="utf-8">
+            <form action="" method="post" accept-charset="utf-8">{% csrf_token %}
                 {% if form.non_field_errors %}
                     {% for error in form.non_field_errors %}
                         <span class="help-inline">{{ error|escape }}</span>
